--- a/assignments/assignment1/assignment1-starter-code/index.html
+++ b/assignments/assignment1/assignment1-starter-code/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" ng-app="LunchCheck">
   <head>
     <title>Lunch Checker</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -8,22 +8,28 @@
       .message { font-size: 1.3em; font-weight: bold; }
     </style>
   </head>
-<body>
+<script src="angular.min.js"></script>
+<script src="app.js"></script>
+<body ng-controller="LunchCheckController">
    <div class="container">
      <h1>Lunch Checker</h1>
 
          <div class="form-group">
              <input id="lunch-menu" type="text"
-             placeholder="list comma separated dishes you usually have for lunch"
-             class="form-control">
+               placeholder="{{placeholder}}"
+               class="form-control"
+               ng-model="items">
          </div>
          <div class="form-group">
-             <button class="btn btn-default">Check If Too Much</button>
+             <button class="btn btn-default" ng-click="verifyLunch()">Check If Too Much</button>
          </div>
          <div class="form-group message">
-           <!-- Your message can go here. -->
+           <div ng-model="message" class="text">{{message}}</div>
          </div>
    </div>
 
 </body>
 </html>
+
+
+
