--- a/assignments/assignment2/assignment2-starter-code/index.html
+++ b/assignments/assignment2/assignment2-starter-code/index.html
@@ -22,29 +22,33 @@
       }
     </style>
   </head>
-<body>
+  <script src="angular.min.js"></script>
+  <script src="app.js"></script>
+<body ng-app="ShoppingListCheckOff">
   <div class="container">
   <h1>Shopping List Check Off</h1>
 
   <div class="row">
 
     <!-- To Buy List -->
-    <div class="col-md-6">
+    <div class="col-md-6" ng-controller="ToBuyController as requiredElements">
      <h2>To Buy:</h2>
      <ul>
-       <li>Buy 10 cookies <button class="btn btn-default"><span class="glyphicon glyphicon-ok"></span> Bought</button></li>
-       <li>Buy 10 cookies <button class="btn btn-default"><span class="glyphicon glyphicon-ok"></span> Bought</button></li>
+      <li ng-repeat="item in requiredElements.items">
+        Buy {{item.quantity}} {{item.name}}
+        <button class="btn btn-default" ng-click="requiredElements.buyItem($index)"><span class="glyphicon glyphicon-ok"></span> Bought</button>
+      </li>
      </ul>
-     <div class="emptyMessage">Everything is bought!</div>
+     <div ng-if="requiredElements.items.length==0" class="emptyMessage">Everything is bought!</div>
     </div>
 
     <!-- Already Bought List -->
-    <div class="col-md-6">
+    <div class="col-md-6" ng-controller="AlreadyBoughtController as boughtElements">
      <h2>Already Bought:</h2>
      <ul>
-       <li>Bought 10 cookies</li>
+      <li ng-repeat="item in boughtElements.items">Bought {{item.quantity}} {{item.name}}</li>
      </ul>
-     <div class="emptyMessage">Nothing bought yet.</div>
+     <div ng-if="boughtElements.items.length==0" class="emptyMessage">Nothing bought yet.</div>
     </div>
   </div>
 </div>
